# BTech-Project

./: .gitmodules  README.md  build.gradle
android/: .gitignore  README.md  build.gradle
android/app/: CMakeLists.txt  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
desktop/: .gitignore  CMakeLists.txt  README.md
desktop/src/main/cpp/: Speechy.cpp  Speechy.h
desktop/src/main/java/: Speechy.form  Speechy.java  WavRecorder.java
poster/: Implementation of Speech Recognition System for Mobile Devices.pptx  Implementation of Speech Recognition System for Mobile Phones.pptx
report/: CSEThesis.cls  abstract.tex  acknowledgement.tex  appendix.tex  certificate.tex  conclusion.tex  experiment.tex  iitglogo.eps  introduction.tex  proposal.tex  references.bib  survey.tex  thesis.ps  thesis.tex  title.tex
report/figures/: 140101002_0_01.xlsx  140101002_9_15.xlsx
src/: build.gradle  settings.gradle
src/app/: CMakeLists.txt  build.gradle
src/app/src/main/cpp/: direct.cpp  hmm.cpp  native-lib.cpp
src/app/src/main/java/com/gobbledygook/theawless/speechy/app/: MainActivity.kt  MainFragment.kt  PocketSphinx.kt  TrainFragment.kt
src/app/src/main/java/com/gobbledygook/theawless/speechy/audio/: AudioPlayer.kt  AudioRecorder.kt
src/app/src/main/java/com/gobbledygook/theawless/speechy/utils/: Constants.kt  Functions.kt
src/app/src/main/res/drawable/: mic_off.xml  share.xml  wait.xml
src/app/src/main/res/layout/: app_bar_main.xml  fragment_main.xml  fragment_train.xml
src/app/src/main/res/values/: dimens.xml
srlib/: build.gradle
(+53 files in other folders)
